@@ -290,6 +290,7 @@ S3method(print, nonresponse)
 S3method(print, nonresponseSubset)
 S3method(print, regTermTest)
 S3method(print, regTermTestLRT)
+S3method(print, regTermTestWW)
 S3method(print, svrepstat)
 S3method(print, svystat)
 S3method(print, survey.design)
